Add custom block who applied a speed effect

--- a/src/main/resources/assets/testmod/lang/en_us.json
+++ b/src/main/resources/assets/testmod/lang/en_us.json
@@ -9,6 +9,7 @@
   "block.testmod.deepslate_citrine_ore": "Deepslate Citrine Ore",
   "block.testmod.endstone_citrine_ore": "Endstone Citrine Ore",
   "block.testmod.netherrack_citrine_ore": "Netherrack Citrine Ore",
+  "block.testmod.speedy_block": "Speedy Block",
 
   "itemGroup.testmodtab": "TestMod",
   "item.testmod:dowsing_rod.no_valuables": "No Valuables found !"
