--- a/src/main/resources/assets/testmod/lang/en_us.json
+++ b/src/main/resources/assets/testmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.testmod.citrine": "Citrine",
   "item.testmod.raw_citrine": "Raw Citrine",
   "item.testmod.dowsing_rod": "Dowsing Rod",
+  "item.testmod.cucumber": "Cucumber",
 
   "block.testmod.citrine_block": "Citrine Block",
   "block.testmod.raw_citrine_block": "Raw Citrine Block",
@@ -10,6 +11,8 @@
   "block.testmod.endstone_citrine_ore": "Endstone Citrine Ore",
   "block.testmod.netherrack_citrine_ore": "Netherrack Citrine Ore",
   "block.testmod.speedy_block": "Speedy Block",
+
+
 
   "itemGroup.testmodtab": "TestMod",
   "item.testmod:dowsing_rod.no_valuables": "No Valuables found !"
