--- a/src/main/resources/assets/testmod/lang/en_us.json
+++ b/src/main/resources/assets/testmod/lang/en_us.json
@@ -9,6 +9,10 @@
   "item.testmod.citrine_axe": "Citrine Axe",
   "item.testmod.citrine_shovel": "Citrine Shovel",
   "item.testmod.citrine_houe": "Citrine Hoe",
+  "item.testmod.citrine_helmet": "Citrine Helmet",
+  "item.testmod.citrine_chestplate": "Citrine Chestplate",
+  "item.testmod.citrine_leggings": "Citrine Leggings",
+  "item.testmod.citrine_boots": "Citrine Boots",
 
   "block.testmod.citrine_block": "Citrine Block",
   "block.testmod.raw_citrine_block": "Raw Citrine Block",
